--- a/spring-employee-core-service-development.yml
+++ b/spring-employee-core-service-development.yml
@@ -3,6 +3,7 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+      fetchRegistry: true
   instance:
     preferIpAddress: true
 
